RESOLVED FIXED194568
Regression(PSON) MESSAGE_CHECK() hit under WebPageProxy::didFailProvisionalLoadForFrameShared()
https://bugs.webkit.org/show_bug.cgi?id=194568
Summary Regression(PSON) MESSAGE_CHECK() hit under WebPageProxy::didFailProvisionalLo...
Chris Dumez
Reported 2019-02-12 16:57:35 PST
MESSAGE_CHECK() hit under WebPageProxy::didFailProvisionalLoadForFrameShared(): 22 WebKit: IPC::Connection::markCurrentlyDispatchedMessageAsInvalid() <== 22 WebKit: WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared(WTF::Ref<WebKit::WebProcessProxy, WTF::DumbPtrTraits<WebKit::WebProcessProxy> >&&, unsigned long long, WebCore::SecurityOriginData const&, unsigned long long, WTF::String const&, WebCore::ResourceError const&, WebKit::UserData const&) 22 WebKit: WebKit::ProvisionalPageProxy::didFailProvisionalLoadForFrame(unsigned long long, WebCore::SecurityOriginData const&, unsigned long long, WTF::String const&, WebCore::ResourceError const&, WebKit::UserData const&) 22 WebKit: WebKit::ProvisionalPageProxy::cancel() 22 WebKit: WebKit::WebPageProxy::provisionalProcessDidTerminate() 22 WebKit: WebKit::ProvisionalPageProxy::processDidTerminate() 22 WebKit: WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch() 22 WebKit: WebKit::WebProcessProxy::didClose(IPC::Connection&) 19 JavaScriptCore: WTF::RunLoop::performWork()
Attachments
Patch (7.66 KB, patch)
2019-02-12 17:06 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-02-12 16:57:51 PST
Chris Dumez
Comment 2 2019-02-12 17:06:26 PST
WebKit Commit Bot
Comment 3 2019-02-12 18:32:30 PST
Comment on attachment 361871 [details] Patch Clearing flags on attachment: 361871 Committed r241336: <https://trac.webkit.org/changeset/241336>
WebKit Commit Bot
Comment 4 2019-02-12 18:32:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.